fix cut off text

--- a/src/Welcome.scss
+++ b/src/Welcome.scss
@@ -9,8 +9,6 @@
   flex-direction: column;
 
   @media (max-width: 700px) {
-    padding-top: 0;
-    justify-content: flex-end;
   }
 }
 
